# 2026-festival-of-genomics-workshop

./: .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yaml  pyproject.toml  skills-lock.json
.devcontainer/: devcontainer.json
.github/workflows/: code-style.yaml  pr-tests.yaml  release-pypi-package.yaml
2026_festival_of_genomics_workshop/: __init__.py  cli.py  models.py  schemas.py  utils.py
docs/: api.md  datasets.md  follow-along.md  high-level-design.md  index.md
docs/designs/demo/: LLD.md  demo-structure-EARS.md
docs/designs/hackathon/: LLD.md  hackathon-datasets-EARS.md  hackathon-instructor-role-EARS.md  hackathon-reproducibility-EARS.md
docs/designs/presentations/: LLD.md  instructor-commentary-EARS.md  presentation-structure-EARS.md  presenter-selection-EARS.md
docs/transcripts/: design.md
notebooks/: demo.py  demo_follow_along.py  example_notebook.py
tests/: test___init__.py  test_cli.py  test_models.py
